8204173: Lower the minimum number of heap memory pools in MemoryTest.java
Reviewed-by: mchung, sjohanss